# mujoco_projects

./: .gitignore  CODE_ANALYSIS.md  QUICK_START.md  README.md
config/: room-scanner.service
ros2_ws/src/room_scanner/: CMakeLists.txt  package.xml
ros2_ws/src/room_scanner/config/: camera_params.yaml  octomap_params.yaml  rtabmap_params.yaml
ros2_ws/src/room_scanner/launch/: camera_only.launch.py  scanner.launch.py
ros2_ws/src/room_scanner/room_scanner/: __init__.py  gamepad_control.py  gui.py
ros2_ws/src/room_scanner/rviz/: scanner_config.rviz  scanner_minimal.rviz
ros2_ws/src/room_scanner/scripts/: gamepad_control  scanner_gui
scripts/: build_workspace.sh  complete_setup.sh  install_dependencies.sh  install_ros2_humble.sh  install_service.sh  setup_realsense_udev.sh  start_scanner.sh
